Updated local jenkins cred

--- a/gradle/credentials.gradle
+++ b/gradle/credentials.gradle
@@ -1,4 +1,4 @@
 project.ext {
-    jenkinsUser = 'kingpin'
-    jenkinsPassword = 'kingpin'
+    jenkinsUser = 'admin'
+    jenkinsPassword = 'e2cc804433e84ba59d2f3b78dc4a5f8d'
 }
